Improve Search filter Overlay UX (#20)
* updated UX for search filters overlay

* fix lint

* lint

* prettier stuff

Co-authored-by: NarniaGuardian <al.smith823@gmail.com>

--- a/src/assets/i18n/english.json
+++ b/src/assets/i18n/english.json
@@ -29,7 +29,7 @@
     "analyzing": "Analyzing data...",
     "cancel": "Cancel?",
     "canceled": "Search canceled. Open in browser?",
-    "count": "Count",
+    "count": "Results",
     "currencies": "Currency",
     "currency": "Displayed Currency",
     "currency-listing": "Show Listing Currency",
