--- a/src/assets/i18n/french.json
+++ b/src/assets/i18n/french.json
@@ -29,7 +29,7 @@
     "analyzing": "Analyse des données ...",
     "cancel": "Annuler?",
     "canceled": "Recherche annulée. Ouvrir dans le navigateur?",
-    "count": "Compter",
+    "count": "Résultats",
     "currencies": "Devise",
     "currency": "Monnaie affichée",
     "currency-listing": "Afficher la devise de l'annonce",
@@ -174,7 +174,9 @@
   "material": {
     "accelerator": {
       "any": "Appuyez sur n'importe quelle touche ... ESC le définira comme non lié.",
-      "unbound": "Non lié"
+      "unbound": "Non lié",
+      "set-shortcut": "Définir le raccourci",
+      "cancel-set": "Annuler le raccourci de réglage"
     },
     "select-list": {
       "add": "Ajouter à la sélection",
