--- a/src/assets/i18n/portuguese.json
+++ b/src/assets/i18n/portuguese.json
@@ -29,7 +29,7 @@
     "analyzing": "Analisando dados ...",
     "cancel": "Cancelar?",
     "canceled": "Pesquisa cancelada. Abra no navegador?",
-    "count": "Contagem",
+    "count": "Resultados",
     "currencies": "Moeda",
     "currency": "Moeda exibida",
     "currency-listing": "Mostrar moeda da listagem",
@@ -174,7 +174,9 @@
   "material": {
     "accelerator": {
       "any": "Pressione qualquer tecla ... ESC irá configurá-lo como ilimitado.",
-      "unbound": "Não consolidado"
+      "unbound": "Não consolidado",
+      "set-shortcut": "Definir atalho",
+      "cancel-set": "Cancelar configuração de atalho"
     },
     "select-list": {
       "add": "adicionar aos selecionados",
