--- a/src/assets/i18n/russian.json
+++ b/src/assets/i18n/russian.json
@@ -29,7 +29,7 @@
     "analyzing": "Анализ данных...",
     "cancel": "Отменить?",
     "canceled": "Поиск отменен. Открыть в браузере?",
-    "count": "Количество",
+    "count": "Pезультатов",
     "currencies": "Валюта",
     "currency": "Отображаемая валюта",
     "currency-listing": "Показать валюту листинга",
@@ -174,7 +174,9 @@
   "material": {
     "accelerator": {
       "any": "Нажмите любую кнопку или ESC, чтобы отменить привязку",
-      "unbound": "Не привязано"
+      "unbound": "Не привязано",
+      "set-shortcut": "Установить ярлык",
+      "cancel-set": "Отмена настройки ярлыка"
     },
     "select-list": {
       "add": "Добавить в выбранные",
