--- a/src/assets/i18n/simplified-chinese.json
+++ b/src/assets/i18n/simplified-chinese.json
@@ -29,7 +29,7 @@
     "analyzing": "正在分析数据...",
     "cancel": "取消？",
     "canceled": "搜索已取消。在浏览器中打开？",
-    "count": "计数",
+    "count": "结果",
     "currencies": "货币",
     "currency": "显示货币",
     "currency-listing": "显示清单货币",
@@ -174,7 +174,9 @@
   "material": {
     "accelerator": {
       "any": "按任意键... ESC将其设置为未绑定。",
-      "unbound": "未绑定"
+      "unbound": "未绑定",
+      "set-shortcut": "设定捷径",
+      "cancel-set": "取消设置快捷方式"
     },
     "select-list": {
       "add": "添加到选中",
