--- a/src/assets/i18n/thai.json
+++ b/src/assets/i18n/thai.json
@@ -29,7 +29,7 @@
     "analyzing": "กำลังวิเคราะห์ข้อมูล ...",
     "cancel": "ยกเลิก?",
     "canceled": "ยกเลิกการค้นหา เปิดในเบราว์เซอร์?",
-    "count": "นับ",
+    "count": "ผล",
     "currencies": "เงินตรา",
     "currency": "สกุลเงินที่แสดง",
     "currency-listing": "แสดงรายการสกุลเงิน",
@@ -174,7 +174,9 @@
   "material": {
     "accelerator": {
       "any": "กดปุ่มใด ๆ ... ESC จะตั้งค่าเป็นไม่ได้ผูกไว้",
-      "unbound": "หลุด"
+      "unbound": "หลุด",
+      "set-shortcut": "ตั้งทางลัด",
+      "cancel-set": "ยกเลิกการตั้งค่าทางลัด"
     },
     "select-list": {
       "add": "เพิ่มไปยังที่เลือก",
