Settings Descriptions and UX (#43)
* clear up min max slider UI
add/change settings descriptions
add tooltips to confusing settings

* updated i18n for new phrases

* Update src/assets/i18n/german.json

Co-authored-by: Barry3D <55182609+Barry3D@users.noreply.github.com>

* Update src/assets/i18n/german.json

Co-authored-by: Barry3D <55182609+Barry3D@users.noreply.github.com>

* Update src/assets/i18n/german.json

Co-authored-by: Barry3D <55182609+Barry3D@users.noreply.github.com>

Co-authored-by: Barry3D <55182609+Barry3D@users.noreply.github.com>

--- a/src/assets/i18n/english.json
+++ b/src/assets/i18n/english.json
@@ -35,6 +35,7 @@
     "currency-listing": "Show Listing Currency",
     "days": "Last 7 days",
     "debounce-time": "Debounce Time",
+    "debounce-description": "Auto-search Delay",
     "empty": "No results. Open in browser?",
     "error": "An error occured.",
     "errors": {
@@ -79,7 +80,8 @@
     },
     "profiles": "Preselected Profiles",
     "property": {
-      "range": "Min-Max Range"
+      "range": "Min-Max Range",
+      "range-description": "Percentage Increase/Decrease for Search Item's Current Values"
     },
     "query": "Query",
     "range": "Range",
@@ -114,7 +116,7 @@
       },
       "normalize-quality": "Normalize Quality",
       "online-only": "Online Only",
-      "properties": "Properties"
+      "properties": "Base Item Properties"
     },
     "searching": "Searching...",
     "seller": "Seller",
@@ -219,6 +221,7 @@
     "display-version": "Display Version",
     "exit-app": "Exit App",
     "focusable": "Focusable (Keyboard Support)",
+    "focusable-description": "Allows keyboard navigation of the overlay (TAB / ARROW KEYS [←→↑↓])",
     "game-settings": "Game Settings",
     "general": "General",
     "languages": {
