--- a/src/assets/i18n/portuguese.json
+++ b/src/assets/i18n/portuguese.json
@@ -35,6 +35,7 @@
     "currency-listing": "Mostrar moeda da listagem",
     "days": "Últimos 7 dias",
     "debounce-time": "Tempo de Debounce",
+    "debounce-description": "Atraso na pesquisa automática",
     "empty": "Sem resultados. Abra no navegador?",
     "error": "Um erro ocorreu.",
     "errors": {
@@ -79,7 +80,8 @@
     },
     "profiles": "Perfis pré-selecionados",
     "property": {
-      "range": "Min-Max Range"
+      "range": "Min-Max Range",
+      "range-description": "Aumento/redução percentual dos valores atuais do item de pesquisa"
     },
     "query": "Inquerir",
     "range": "Range",
@@ -114,7 +116,7 @@
       },
       "normalize-quality": "Normalizar qualidade",
       "online-only": "Online somente",
-      "properties": "Propriedades"
+      "properties": "Propriedades do item base"
     },
     "searching": "Procurando...",
     "seller": "Vendedor",
@@ -219,6 +221,7 @@
     "display-version": "Versão de exibição",
     "exit-app": "Sair do aplicativo",
     "focusable": "Focável (suporte para teclado)",
+    "focusable-description": "Permite a navegação do teclado pela sobreposição (TAB / ARROW KEYS [←→↑↓])",
     "game-settings": "Configurações do jogo",
     "general": "Geral",
     "languages": {
