--- a/src/assets/i18n/russian.json
+++ b/src/assets/i18n/russian.json
@@ -35,6 +35,7 @@
     "currency-listing": "Показать валюту листинга",
     "days": "Последние 7 дней",
     "debounce-time": "Время задержки",
+    "debounce-description": "Задержка автоматического поиска",
     "empty": "Результатов не найдено. Открыть в браузере?",
     "error": "Произошла ошибка.",
     "errors": {
@@ -79,7 +80,8 @@
     },
     "profiles": "Предварительно выбранные профили",
     "property": {
-      "range": "Мин-Макс Диапазон"
+      "range": "Мин-Макс Диапазон",
+      "range-description": "Процентное увеличение/уменьшение текущих значений элемента поиска"
     },
     "query": "запрос",
     "range": "Разброс",
@@ -114,7 +116,7 @@
       },
       "normalize-quality": "Нормализовать качество",
       "online-only": "Только онлайн",
-      "properties": "свойства"
+      "properties": "Свойства базового элемента"
     },
     "searching": "Поиск...",
     "seller": "Продавец",
@@ -219,6 +221,7 @@
     "display-version": "Отображать версию",
     "exit-app": "Выход из приложения",
     "focusable": "Фокусируемый (поддержка клавиатуры)",
+    "focusable-description": "Позволяет навигацию клавиатуры наложения (TAB / ARROW KEYS [←→↑↓])",
     "game-settings": "Настройки в игре",
     "general": "Основное",
     "languages": {
