--- a/src/assets/i18n/thai.json
+++ b/src/assets/i18n/thai.json
@@ -35,6 +35,7 @@
     "currency-listing": "แสดงรายการสกุลเงิน",
     "days": "7 วันล่าสุด",
     "debounce-time": "เวลาดีบั๊ก",
+    "debounce-description": "ค้นหาล่าช้าอัตโนมัติ",
     "empty": "ไม่มีผลลัพธ์. เปิดในเบราว์เซอร์?",
     "error": "เกิดข้อผิดพลาด.",
     "errors": {
@@ -79,7 +80,8 @@
     },
     "profiles": "โปรไฟล์ที่เลือกไว้ล่วงหน้า",
     "property": {
-      "range": "ช่วง Min-Max"
+      "range": "ช่วง Min-Max",
+      "range-description": "เปอร์เซ็นต์การเพิ่ม/ลดสำหรับค่าปัจจุบันของรายการการค้นหา"
     },
     "query": "สอบถาม",
     "range": "Range",
@@ -114,7 +116,7 @@
       },
       "normalize-quality": "ทำให้คุณภาพเป็นปกติ",
       "online-only": "ออนไลน์เท่านั้น",
-      "properties": "คุณสมบัติ"
+      "properties": "คุณสมบัติรายการฐาน"
     },
     "searching": "ค้นหา ...",
     "seller": "ผู้ขาย",
@@ -219,6 +221,7 @@
     "display-version": "แสดงเวอร์ชั่น",
     "exit-app": "ออกจากแอป",
     "focusable": "สามารถโฟกัสได้ (รองรับคีย์บอร์ด)",
+    "focusable-description": "อนุญาตการนำทางด้วยคีย์บอร์ดของภาพซ้อนทับ (TAB / ARROW KEYS [←→↑↓])",
     "game-settings": "ตั้งค่าเกม",
     "general": "ทั่วไป",
     "languages": {
