--- a/src/assets/i18n/simplified-chinese.json
+++ b/src/assets/i18n/simplified-chinese.json
@@ -35,6 +35,7 @@
     "currency-listing": "显示清单货币",
     "days": "过去7天",
     "debounce-time": "去抖时间",
+    "debounce-description": "自动搜寻延迟",
     "empty": "没有结果。在浏览器中打开？",
     "error": "发生错误。",
     "errors": {
@@ -79,7 +80,8 @@
     },
     "profiles": "预选个人资料",
     "property": {
-      "range": "最小最大范围"
+      "range": "最小最大范围",
+      "range-description": "搜索项目当前值的百分比增加/减少"
     },
     "query": "询问",
     "range": "范围",
@@ -114,7 +116,7 @@
       },
       "normalize-quality": "标准化质量",
       "online-only": "仅在线",
-      "properties": "属性"
+      "properties": "基本项目属性"
     },
     "searching": "搜索...",
     "seller": "卖家",
@@ -219,6 +221,7 @@
     "display-version": "显示版本",
     "exit-app": "退出应用",
     "focusable": "重点突出（键盘支持）",
+    "focusable-description": "允许键盘导航叠加层 (TAB / ARROW KEYS [←→↑↓])",
     "game-settings": "游戏设置",
     "general": "一般",
     "languages": {
