Update german.json (#113)
Changed some translations
https://github.com/PoE-Overlay-Community/PoE-Overlay-Community-Fork/issues/76

Co-authored-by: Kevin Strasters <kevin.strasters@gmail.com>

--- a/src/assets/i18n/german.json
+++ b/src/assets/i18n/german.json
@@ -32,9 +32,9 @@
     "count": "Ergebnisse",
     "currencies": "Währung",
     "currency": "Angezeigte Währung",
-    "currency-listing": "Währung des Angebotes anzeigen",
+    "currency-listing": "Angebot in Originalwährung anzeigen",
     "days": "Letzte 7 Tage",
-    "debounce-time": "Entprellzeit",
+    "debounce-time": "Erzwungungene Wartezeit",
     "debounce-description": "Verzögerung der automatischen Suche",
     "empty": "Keine Ergebnisse. Im Browser öffnen?",
     "error": "Es ist ein Fehler aufgetreten.",
@@ -42,8 +42,8 @@
       "http": "Konnte nicht mit der GGG-Handelswebsite kommunizieren.\nBitte stellen Sie sicher, dass die Website erreichbar ist.",
       "rate": "Limit erreicht. Bitte versuchen Sie es später noch einmal.\nWenn dies weiterhin geschieht, versuchen Sie bitte, die Anzahl der abgerufenen Artikel zu verringern."
     },
-    "fetch-count": "Fetch Count",
-    "initial-search": "Führen Sie die erste Suche aus",
+    "fetch-count": "Anzahl der abzufragenden Einträge",
+    "initial-search": "Vorläufige Suche anhand von Standardkriterien automatisch auslösen",
     "layout": "Layout",
     "listings": "Gefunden {{total}}. {{count}} Einträge abrufen ...",
     "loading": "Wird geladen...",
@@ -95,7 +95,7 @@
       "attack": "Attacke",
       "defense": "Verteidigung",
       "filter": "Filter",
-      "gem": "Edelsteinstufe, Kartenstufe und -qualität",
+      "gem": "Gemmenstufe, Kartenstufe und -qualität",
       "item-default-links": "Item Link",
       "item-level": "Gegenstandsstufe",
       "item-links": {
@@ -121,12 +121,12 @@
     "searching": "Suchen...",
     "seller": "Verkäufer",
     "settings": "Bewertungseinstellungen",
-    "stale": "Filter wurde geändert. Wieder holen ... - Jetzt?",
+    "stale": "Filter wurde geändert. Erneute Suche ... - Jetzt?",
     "stats": "Stats",
     "stats-export": "Exportieren der Stats in die Zwischenablage",
     "stats-import": "Importieren der Stats aus der Zwischenablage",
-    "stats-range": "Min-Max-Bereich",
-    "stats-unique-check-all": "Einzigartige Check All",
+    "stats-range": "Toleranz der Statwerte",
+    "stats-unique-check-all": "Alle einzigartigen Stats auswählen",
     "switch": "Betrag wechseln",
     "tag": {
       "clipboard": "Hinweis wurde in die Zwischenablage kopiert.",
@@ -194,7 +194,7 @@
     "navigation": "Navigation",
     "navigations": {
       "disabled": "Deaktiviert",
-      "inverse": "Invers",
+      "inverse": "Umgekehrt",
       "normal": "Normal"
     },
     "open-poedb": "PoE DB öffnen",
@@ -209,18 +209,18 @@
   "settings": {
     "app": "App",
     "auto-download": "Update automatisch herunterladen",
-    "auto-launch": "Beim Booten ausführen",
+    "auto-launch": "Automatisch starten",
     "cancel": "Abbrechen",
     "dialog": "Dialog",
     "dialog-opacity": "Dialogopazität",
     "dialog-spawn-position": {
-      "center": "Center",
+      "center": "Zentrum",
       "cursor": "Mauszeiger"
     },
-    "dialog-spawn-position-title": "Dialog Spawn Position",
-    "display-version": "Version anzeigen",
+    "dialog-spawn-position-title": "Start-Position",
+    "display-version": "Versionsbezeichnung anzeigen",
     "exit-app": "App beenden",
-    "focusable": "Fokussierbar (Tastaturunterstützung)",
+    "focusable": "Auswählbar (Tastaturunterstützung)",
     "focusable-description": "Ermöglicht die Tastaturnavigation des Overlays (TAB / PFEILTASTEN [←→↑↓])",
     "game-settings": "Spieleinstellungen",
     "general": "Allgemeines",
