--- a/src/assets/i18n/russian.json
+++ b/src/assets/i18n/russian.json
@@ -1,6 +1,7 @@
 {
   "app": {
     "clickable": "«Click» = браузер в игре, «CTRL + Click» браузер по умолчанию",
+    "clickable-external-only": "«Click» браузер по умолчаниюr",
     "language": "Язык",
     "shortcut": "Комбинация клавиш",
     "update": {
@@ -27,6 +28,7 @@
   "evaluate": {
     "age": "Возраст",
     "analyzing": "Анализ данных...",
+    "browser": "браузер в игре",
     "cancel": "Отменить?",
     "canceled": "Поиск отменен. Открыть в браузере?",
     "count": "Pезультатов",
@@ -36,6 +38,7 @@
     "days": "Последние 7 дней",
     "debounce-time": "Время задержки",
     "debounce-description": "Задержка автоматического поиска",
+    "disable-browser-overlay": "Отключить браузер в игре",
     "empty": "Результатов не найдено. Открыть в браузере?",
     "error": "Произошла ошибка.",
     "errors": {
