--- a/src/assets/i18n/thai.json
+++ b/src/assets/i18n/thai.json
@@ -1,6 +1,7 @@
 {
   "app": {
     "clickable": "'Click' = เบราว์เซอร์ในเกม, 'CTRL + คลิก' เบราว์เซอร์เริ่มต้น",
+    "clickable-external-only": "'คลิก' เบราว์เซอร์เริ่มต้น",
     "language": "ภาษา",
     "shortcut": "ทางลัด",
     "update": {
@@ -27,6 +28,7 @@
   "evaluate": {
     "age": "อายุ",
     "analyzing": "กำลังวิเคราะห์ข้อมูล ...",
+    "browser": "เบราว์เซอร์ในเกม",
     "cancel": "ยกเลิก?",
     "canceled": "ยกเลิกการค้นหา เปิดในเบราว์เซอร์?",
     "count": "ผล",
@@ -36,6 +38,7 @@
     "days": "7 วันล่าสุด",
     "debounce-time": "เวลาดีบั๊ก",
     "debounce-description": "ค้นหาล่าช้าอัตโนมัติ",
+    "disable-browser-overlay": "ปิดการใช้งาน เบราว์เซอร์ในเกม",
     "empty": "ไม่มีผลลัพธ์. เปิดในเบราว์เซอร์?",
     "error": "เกิดข้อผิดพลาด.",
     "errors": {
