--- a/src/assets/i18n/german.json
+++ b/src/assets/i18n/german.json
@@ -1,11 +1,10 @@
 {
   "app": {
     "clickable": "'Klick' = Browser im Spiel, 'STRG + Klick' Standardbrowser",
-    "clickable-external-only": "'Klick' Standardbrowser",
     "language": "Sprache",
     "shortcut": "Tastaturkürzel",
     "update": {
-      "available": "Ein neues Update ist verfügbar. Es wird automatisch heruntergeladen, sofern nicht anders angegeben.",
+      "available": "Ein neues Update ist verfügbar. Wird automatisch heruntergeladen, sofern nicht anders angegeben.",
       "downloaded": "Das neue Update kann jetzt installiert werden. Bitte starten Sie PoE Overlay neu."
     }
   },
@@ -28,29 +27,27 @@
   "evaluate": {
     "age": "Alter",
     "analyzing": "Daten analysieren...",
-    "browser": "Browser im Spiel",
     "cancel": "Abbrechen?",
     "canceled": "Suche abgebrochen. Im Browser öffnen?",
     "count": "Ergebnisse",
     "currencies": "Währung",
     "currency": "Angezeigte Währung",
-    "currency-listing": "Angebot in Originalwährung anzeigen",
+    "currency-listing": "Währung des Angebotes anzeigen",
     "days": "Letzte 7 Tage",
-    "debounce-time": "Erzwungungene Wartezeit",
+    "debounce-time": "Entprellzeit",
     "debounce-description": "Verzögerung der automatischen Suche",
-    "disable-browser-overlay": "Deaktivieren Browser im Spiel",
     "empty": "Keine Ergebnisse. Im Browser öffnen?",
     "error": "Es ist ein Fehler aufgetreten.",
     "errors": {
       "http": "Konnte nicht mit der GGG-Handelswebsite kommunizieren.\nBitte stellen Sie sicher, dass die Website erreichbar ist.",
       "rate": "Limit erreicht. Bitte versuchen Sie es später noch einmal.\nWenn dies weiterhin geschieht, versuchen Sie bitte, die Anzahl der abgerufenen Artikel zu verringern."
     },
-    "fetch-count": "Anzahl der abzufragenden Einträge",
-    "initial-search": "Vorläufige Suche anhand von Standardkriterien automatisch auslösen",
+    "fetch-count": "Fetch Count",
+    "initial-search": "Führen Sie die erste Suche aus",
     "layout": "Layout",
     "listings": "Gefunden {{total}}. {{count}} Einträge abrufen ...",
     "loading": "Wird geladen...",
-    "mean": "Mittelwert",
+    "mean": "Mean",
     "median": "Median",
     "mode": "Mode",
     "name": "Bewerten",
@@ -98,7 +95,7 @@
       "attack": "Attacke",
       "defense": "Verteidigung",
       "filter": "Filter",
-      "gem": "Gemmenstufe, Kartenstufe und -qualität",
+      "gem": "Edelsteinstufe, Kartenstufe und -qualität",
       "item-default-links": "Item Link",
       "item-level": "Gegenstandsstufe",
       "item-links": {
@@ -124,12 +121,12 @@
     "searching": "Suchen...",
     "seller": "Verkäufer",
     "settings": "Bewertungseinstellungen",
-    "stale": "Filter wurde geändert. Erneute Suche ... - Jetzt?",
+    "stale": "Filter wurde geändert. Wieder holen ... - Jetzt?",
     "stats": "Stats",
     "stats-export": "Exportieren der Stats in die Zwischenablage",
     "stats-import": "Importieren der Stats aus der Zwischenablage",
-    "stats-range": "Toleranz der Statwerte",
-    "stats-unique-check-all": "Alle einzigartigen Stats auswählen",
+    "stats-range": "Min-Max-Bereich",
+    "stats-unique-check-all": "Einzigartige Check All",
     "switch": "Betrag wechseln",
     "tag": {
       "clipboard": "Hinweis wurde in die Zwischenablage kopiert.",
@@ -151,10 +148,10 @@
     "dwm": "Dies wird hauptsächlich von einem deaktivierten Aero / DWM verursacht. Versuchen Sie daher, diese Windows-Funktion zu aktivieren.<br> Da diese erforderlich ist, um transparente Fenster zu erstellen.",
     "dwm-title": "Warum wird mein Bildschirm nach dem Benutzen einer Funktion schwarz / weiß?",
     "faq": "FAQ",
-    "graph": "Der Balken zeigt die Verteilung des Gegenstandwerts an. Grundsätzlich werden die Gegenstandswerte nach Wert gruppiert und gezählt.<br> Der höchste Balken ist der Modus. Wird auch als \"häufigster Wert\" bezeichnet. Mittelwert ist der Durchschnitt. Der Median ist der zentrierte Wert aller Werte.",
+    "graph": "Der Balken zeigt die Verteilung des Gegenstandwerts an. Grundsätzlich werden die Werte nach Wert gruppiert und gezählt.<br> Der höchste Balken ist der Modus. Wird auch als \"häufigster Wert\" bezeichnet. Mittelwert ist der Durchschnitt. Der Median ist der zentrierte Wert aller Werte.",
     "graph-title": "Was stellt die Grafik dar? Was ist Modus / Mittelwert / Median?",
     "graph-url": "\"So lesen Sie einen Histogramm-Min-Max-Median-Mittelwert\" von \"academy.datawrapper.de\" öffnen",
-    "graphic": "Dies wird hauptsächlich durch inkompatible Grafiktreiber für die aktuelle Chromiumversion verursacht.<br> Deaktivieren Sie die Hardwarebeschleunigung im Taskleistenmenü.",
+    "graphic": "Dies wird hauptsächlich durch inkompatible Grafiktreiber für die aktuelle Chromversion verursacht.<br> Deaktivieren Sie die Hardwarebeschleunigung im Taskleistenmenü.",
     "graphic-title": "Die Grafiken sind verschwommen / Grafikfehler?",
     "name": "Hilfe",
     "patreon": "Unterstütze mich auf Patreon",
@@ -197,7 +194,7 @@
     "navigation": "Navigation",
     "navigations": {
       "disabled": "Deaktiviert",
-      "inverse": "Umgekehrt",
+      "inverse": "Invers",
       "normal": "Normal"
     },
     "open-poedb": "PoE DB öffnen",
@@ -212,18 +209,18 @@
   "settings": {
     "app": "App",
     "auto-download": "Update automatisch herunterladen",
-    "auto-launch": "Automatisch starten",
+    "auto-launch": "Beim Booten ausführen",
     "cancel": "Abbrechen",
     "dialog": "Dialog",
-    "dialog-opacity": "Dialogtransparenz",
+    "dialog-opacity": "Dialogopazität",
     "dialog-spawn-position": {
-      "center": "Zentrum",
+      "center": "Center",
       "cursor": "Mauszeiger"
     },
-    "dialog-spawn-position-title": "Start-Position",
-    "display-version": "Versionsbezeichnung anzeigen",
+    "dialog-spawn-position-title": "Dialog Spawn Position",
+    "display-version": "Version anzeigen",
     "exit-app": "App beenden",
-    "focusable": "Auswählbar (Tastaturunterstützung)",
+    "focusable": "Fokussierbar (Tastaturunterstützung)",
     "focusable-description": "Ermöglicht die Tastaturnavigation des Overlays (TAB / PFEILTASTEN [←→↑↓])",
     "game-settings": "Spieleinstellungen",
     "general": "Allgemeines",
@@ -245,6 +242,6 @@
     "relaunch-app": "App neu starten",
     "save": "Speichern",
     "ui-language": "Sprache der Benutzeroberfläche",
-    "zoom": "Zoom"
+    "zoom": "Skalierung"
   }
 }
