--- a/src/assets/i18n/french.json
+++ b/src/assets/i18n/french.json
@@ -1,12 +1,11 @@
 {
   "app": {
-    "clickable": "'Clic' = navigateur en jeu, 'CTRL + Clic' navigateur par défaut",
-    "clickable-external-only": "'Clic' navigateur par défaut",
+    "clickable": "'Click' = navigateur en jeu, 'CTRL + Click' navigateur par défaut",
     "language": "Langue",
     "shortcut": "Raccourci",
     "update": {
-      "available": "Une nouvelle mise à jour est disponible. Elle sera automatiquement téléchargée, sauf indication contraire.",
-      "downloaded": "La nouvelle mise à jour est maintenant prête à être installée. Veuillez relancer PoE Overlay."
+      "available": "Une nouvelle mise à jour est disponible. Sera automatiquement téléchargé, sauf indication contraire.",
+      "downloaded": "La nouvelle mise à jour est maintenant prête à installer. Veuillez relancer PoE Overlay."
     }
   },
   "bookmark": {
@@ -16,9 +15,9 @@
     "url": "URL"
   },
   "clipboard": {
-    "empty": "Le presse-papier était vide. Vous devrez peut-être démarrer PoE Overlay avec des droits privilégiés.",
+    "empty": "Le presse-papiers était vide. Vous devrez peut-être démarrer PoE Overlay avec des droits privilégiés.",
     "error": "Une erreur s'est produite lors de l'analyse de l'élément.",
-    "parser-error": "L'élément n'a pas pu être analysé. Assurez-vous d'avoir sélectionné la bonne langue."
+    "parser-error": "L'élément n'a pas pu être analysé. Veuillez vous assurer d'avoir sélectionné la bonne langue."
   },
   "command": {
     "add": "Ajouter une commande",
@@ -26,9 +25,8 @@
     "text": "Commande"
   },
   "evaluate": {
-    "age": "Âge",
-    "analyzing": "Analyse des données...",
-    "browser": "navigateur en jeu",
+    "age": "âge",
+    "analyzing": "Analyse des données ...",
     "cancel": "Annuler?",
     "canceled": "Recherche annulée. Ouvrir dans le navigateur?",
     "count": "Résultats",
@@ -36,22 +34,21 @@
     "currency": "Monnaie affichée",
     "currency-listing": "Afficher la devise de l'annonce",
     "days": "Les 7 derniers jours",
-    "debounce-time": "Délai entre chaque recherche",
+    "debounce-time": "Temps de rebond",
     "debounce-description": "Délai de recherche automatique",
-    "disable-browser-overlay": "Désactiver navigateur en jeu",
     "empty": "Aucun résultat. Ouvrir dans le navigateur?",
     "error": "Une erreur s'est produite.",
     "errors": {
-      "http": "Impossible de communiquer avec le site web d'échange de GGG.\nAssurez-vous que le site web est accessible.",
-      "rate": "Limite atteinte. Veuillez réessayer plus tard.\nSi cela reproduit encore, essayer de réduire le nombre d'articles récupérés."
+      "http": "Impossible de communiquer avec le site Web commercial GGG.\nVeuillez vous assurer que le site Web est accessible.",
+      "rate": "Limite atteinte. Veuillez réessayer plus tard.\nSi cela continue, essayez de réduire le nombre d'articles récupérés."
     },
     "fetch-count": "Nombre de recherches",
     "initial-search": "Lancer la recherche initiale",
     "layout": "Disposition",
-    "listings": "{{total}} trouvé(s). Récupération de {{count}} entrée(s)...",
+    "listings": " {{total}}trouvé. Récupération de {{count}} entrées ...",
     "loading": "Chargement...",
-    "mean": "Moyenne",
-    "median": "Médiane",
+    "mean": "Mean",
+    "median": "Médian",
     "mode": "Mode",
     "name": "Évaluer",
     "not-found": "Aucune donnée disponible.",
@@ -59,102 +56,102 @@
       "confidence": "Confiance",
       "error": "Une erreur s'est produite.",
       "errors": {
-        "http": "Impossible de communiquer avec poeprices.info\nAssurez-vous que le site web est accessible."
+        "http": "Impossible de communiquer avec poeprices.info\nVeuillez vous assurer que le site Web est accessible."
       },
-      "feedback": "Rétroaction",
+      "feedback": "Retour d'information",
       "feedbacks": {
-        "fair": "équitable",
-        "high": "trop cher",
-        "low": "pas assez cher"
+        "fair": "Équitable",
+        "high": "trop haut",
+        "low": "trop bas"
       },
-      "language": "poeprices.info ne prend en charge que l'anglais comme langue pour le client.",
+      "language": "poeprices.info ne prend en charge que l'anglais comme langue client.",
       "sending": "Envoi",
-      "source": "Prédiction des prix basées sur poeprices.info",
+      "source": "Prédiction des prix basée sur poeprices.info",
       "thanks": "Merci!"
     },
-    "pricing": "Mise en vente",
+    "pricing": "Prix",
     "pricing-method": "Méthode",
     "pricings": {
-      "clipboard": "Presse-papier",
+      "clipboard": "Presse-papiers",
       "tagging": "Marquage"
     },
     "profile": {
-      "default": "Par défaut"
+      "default": "Défaut"
     },
     "profiles": "Profils présélectionnés",
     "property": {
       "range": "Gamme Min-Max",
       "range-description": "Augmentation/diminution en pourcentage des valeurs actuelles de l'élément de recherche"
     },
-    "query": "Requête",
-    "range": "Portée",
+    "query": "Question",
+    "range": "Range",
     "result-view": "Affichage des résultats",
     "result-views": {
       "graph": "Graphique",
-      "list": "Liste"
+      "list": "liste"
     },
-    "run-search": "Rechercher",
+    "run-search": "Chercher",
     "search": {
       "attack": "Attaque",
-      "defense": "Défense",
+      "defense": "La défense",
       "filter": "Filtre",
-      "gem": "Niveau de la gemme, pallier de carte et leur qualité",
-      "item-default-links": "Lien d'item",
-      "item-level": "Niveau d'item",
+      "gem": "Niveau de gemme, pallier de carte et qualité",
+      "item-default-links": "Lien d'objet",
+      "item-level": "Niveau d'objet",
       "item-links": {
         "always": "Toujours",
-        "never": "Jamais"
+        "never": "jamais"
       },
       "item-sockets": "Châsses",
-      "item-type": "Type d'item",
+      "item-type": "Type d'objet",
       "max-age": {
-        "any": "À tout moment",
-        "day": "Jusqu'à il y a un jour",
-        "days": "Jusqu'à il y a trois jours",
-        "month": "Jusqu'à il y a un mois",
-        "months": "Jusqu'à il y a deux mois",
-        "title": "Âge maximum des offres",
-        "week": "Jusqu'à il y a une semaine",
-        "weeks": "Jusqu'à il y a deux semaines"
+        "any": "à tout moment",
+        "day": "Jusqu'à un jour",
+        "days": "Jusqu'à 3 jours",
+        "month": "Jusqu'à 1 mois",
+        "months": "Jusqu'à 2 mois",
+        "title": "Âge de l'offre maximum",
+        "week": "Jusqu'à une semaine",
+        "weeks": "Jusqu'à 2 semaines"
       },
       "normalize-quality": "Normaliser la qualité",
       "online-only": "En ligne seulement",
-      "properties": "Propriétés de base de l'item"
+      "properties": "Propriétés de l'élément de base"
     },
     "searching": "Recherche...",
-    "seller": "Vendeur",
+    "seller": "vendeur",
     "settings": "Paramètres d'évaluation",
-    "stale": "Le filtre a été changé. Effectuer une recherche à nouveau ... - Maintenant?",
+    "stale": "Le filtre a été changé. Aller chercher à nouveau ... - Maintenant?",
     "stats": "Statistiques",
-    "stats-export": "Exporter les statistiques vers le presse-papier",
-    "stats-import": "Importer des statistiques depuis le presse-papier",
+    "stats-export": "Exporter les statistiques vers le presse-papiers",
+    "stats-import": "Importer des statistiques depuis le presse-papiers",
     "stats-range": "Gamme Min-Max",
-    "stats-unique-check-all": "Cocher tous les Uniques",
-    "switch": "Inverser les montants",
+    "stats-unique-check-all": "Tout cocher unique",
+    "switch": "inverser les valeurs",
     "tag": {
-      "clipboard": "La note a été copiée dans le presse-papier.",
-      "note": "Seuls les éléments sans note existante peuvent être marqués. La note a été copiée à la place.",
-      "outside-stash": "Seuls les items à l'intérieur de la réserve peuvent être marqués. La note a été copiée à la place."
+      "clipboard": "La note a été copiée dans le presse-papiers.",
+      "note": "Seuls les éléments sans note existante peuvent être taggés. La note a été copiée à la place.",
+      "outside-stash": "Seuls les objets à l'intérieur de la réserve peuvent être taggés. La note a été copiée à la place."
     },
-    "translate": "Traduction de l'évaluation",
-    "translate-language": "Langue de l'item traduit",
-    "translate-settings": "Paramètres de la traduction de l'évaluation",
+    "translate": "Évaluation traduite",
+    "translate-language": "Langue de l'objet traduit",
+    "translate-settings": "Paramètres de l'évaluation traduuite",
     "value": "Valeur"
   },
   "help": {
     "browser": "Maintenir CTRL tout en cliquant ouvrira le lien dans le navigateur par défaut.",
     "browser-title": "Comment ouvrir la recherche dans mon navigateur par défaut?",
-    "bug": "Signaler un problème",
-    "bug-title": "Vous avez trouvé un bug? Vous avez une suggestion? Créer un nouveau ticket \"Problèmes\" sur GitHub",
+    "bug": "Remonter un problème",
+    "bug-title": "Vous avez trouvé un bug? Ou avez-vous une suggestion? Veuillez ouvrir un ticket sur GitHub",
     "donate": "Faire un don via PayPal",
-    "donate-title": "Vous aimez le projet ? N'hésitez pas à faire un don. Merci pour votre aide!",
-    "dwm": "Cela est principalement dû au thème Aero / DWM qui est désactivé. Essayez d'activer cette fonctionnalité Windows.<br> Elle est requise pour créer des fenêtres transparentes.",
-    "dwm-title": "Pourquoi mon écran devient-il noir / blanc quand j'utilise une fonctionnalité?",
+    "donate-title": "Vous aimez le projet ? N'hésitez pas à laisser un don. Merci pour votre aide !",
+    "dwm": "Cela est principalement dû à Aero / DWM qui est désactivé. Essayez d'activer cette fonctionnalité Windows.<br> Elle est requise pour créer des fenêtres transparentes.",
+    "dwm-title": "Pourquoi mon écran devient-il noir / blanc quand j'utilise une fonctionnalité ?",
     "faq": "FAQ",
-    "graph": "La barre indique la distribution des valeurs de l'item. Il regroupe essentiellement les valeurs similaires ensemble et en fait le décompte.<br> La barre la plus haute est le Mode. Aussi appelé «valeur la plus fréquente». La moyenne est la moyenne arithmétique. La médiane est la valeur centrée des valeurs.",
-    "graph-title": "Que représente le graphique? Qu'est-ce que le Mode / la moyenne / médiane?",
-    "graph-url": "Ouvrez «Comment lire un histogramme» par «fr.wikihow.com/lire-un-histogramme»",
-    "graphic": "Cela est principalement dû à des pilotes graphiques incompatibles pour la version actuelle de chromium.<br> Veuillez désactiver l'accélération matérielle dans le menu de la barre d'état.",
+    "graph": "La barre indique la distribution de la valeur de l'objet. Il regroupe essentiellement les valeurs par valeur et les compte.<br> La barre la plus haute est le Mode. Aussi appelé «valeur la plus représenté». La moyenne est la moyenne arithmétique. La médiane est la valeur centrée des valeurs.",
+    "graph-title": "Que représente le graphique? Qu'est-ce que le mode / la moyenne / médiane?",
+    "graph-url": "Ouvrez 'Comment lire un histogramme' par 'fr.wikihow.com/lire-un-histogramme'",
+    "graphic": "Cela est principalement dû à des pilotes graphiques incompatibles pour la version actuelle de chrome.<br> Veuillez désactiver l'accélération matérielle dans le menu de la barre d'état.",
     "graphic-title": "Les graphismes sont flous / bug graphique?",
     "name": "Aidez-moi",
     "patreon": "Soutenez-moi sur Patreon",
@@ -162,31 +159,31 @@
     "wiki-title": "Voir le wiki du projet pour plus de documentation"
   },
   "map": {
-    "boss": "Bosse",
-    "boss-rating": "Évaluation du bosse",
-    "boss-rating-info": "5: Dégâts élevés et constants difficile à évités de manière efficace; évité par de nombreux joueurs.\n4: Dégâts élevés et constants pouvant être évités aisément, mais toujours très dangereux.\n3: Dégâts occasionnellement élevés qui peuvent être évités aisément.\n2: Dégâts modéré qui peut être facilement évités et / ou aisément atténué par la plupart des types de personnage.\n1: Une formalité pour la plupart des types de personnage.",
-    "bosses": "Bosse",
-    "info": "Information",
+    "boss": "Boss",
+    "boss-rating": "Évaluation du boss",
+    "boss-rating-info": "5: sortie de dommages élevée et constante difficile à éviter de manière fiable; sauté par de nombreux joueurs.\n4: Dégâts élevés et constants pouvant être évités raisonnablement bien mais toujours très dangereux.\n3: Dégâts occasionnellement élevés qui peuvent être évités raisonnablement bien.\n2: Sortie de dégâts modérée qui peut être facilement maîtrisée et / ou raisonnablement atténuée par la plupart des builds.\n1: trivial pour la plupart des versions.",
+    "bosses": "Boss",
+    "info": "Info",
     "layout-rating": "Disposition de la fenêtre d'évaluation",
-    "layout-rating-info": "A: La carte est linéaire et elle peut être complétée de manière efficace sans devoir revenir sur ses pas.\nB: La carte est ouverte avec peu d'obstacle ou n'a que des chemins alternatifs courts et bien connectés.\nC: La carte est ouverte avec de nombreux obstacles ou a de longs chemins alternatifs qui nécessitent de revenir sur ses pas.",
+    "layout-rating-info": "R: La carte a une disposition cohérente qui peut être complètement effacée de manière fiable sans retour en arrière.\nB: La carte a une disposition ouverte avec peu d'obstacles, ou n'a que des chemins latéraux courts et bien connectés.\nC: La carte a une disposition ouverte avec de nombreux obstacles, ou a de longs chemins latéraux qui nécessitent un retour en arrière.",
     "name": "Carte",
-    "no-map": "L'item n'est pas une carte.",
+    "no-map": "L'objet n'est pas une carte.",
     "not-found": "Carte introuvable.",
-    "stats-warning": "Avertissements concernant les modificateurs",
-    "stats-warning-export": "Exporter les avertissements de modificateurs vers le presse-papier",
-    "stats-warning-import": "Importer les avertissements de modificateurs depuis le presse-papier"
+    "stats-warning": "Avertissements concernant les mods",
+    "stats-warning-export": "Exporter les avertissements de mods vers le presse-papiers",
+    "stats-warning-import": "Importer les avertissements de mods depuis le presse-papiers"
   },
   "material": {
     "accelerator": {
-      "any": "Appuyez sur une touche... ESC supprime le raccourci clavier.",
-      "unbound": "Aucun raccourci clavier",
-      "set-shortcut": "Définir le raccourci clavier",
-      "cancel-set": "Annuler le réglage de raccourci clavier"
+      "any": "Appuyez sur n'importe quelle touche ... ESC le définira comme non lié.",
+      "unbound": "Non lié",
+      "set-shortcut": "Définir le raccourci",
+      "cancel-set": "Annuler le raccourci de réglage"
     },
     "select-list": {
       "add": "Ajouter à la sélection",
       "remove": "Supprimer de la sélection",
-      "search": "Rechercher",
+      "search": "Chercher",
       "selected": "Sélectionné",
       "unselected": "Non séléctionné"
     }
@@ -198,46 +195,46 @@
     "navigations": {
       "disabled": "Désactivé",
       "inverse": "Inversé",
-      "normal": "Par défaut"
+      "normal": "Ordinaire"
     },
     "open-poedb": "Ouvrir PoE DB",
     "open-poedb-external": "Ouvrir PoE DB dans une nouvelle fenêtre",
     "open-wiki": "Ouvrir le wiki",
     "open-wiki-external": "Ouvrir le wiki dans une nouvelle fenêtre",
-    "parser-error": "Le presse-papier n'a pas pu être analysé. Assurez-vous que vous avez nettoyé (ESC) la sélection précédente.",
+    "parser-error": "Le presse-papiers n'a pas pu être analysé. Veuillez vous assurer que vous avez nettoyé (ESC) la sélection précédente.",
     "poedb": "PoE DB",
     "stash": "Réserve",
     "wiki": "Wiki"
   },
   "settings": {
-    "app": "Application",
-    "auto-download": "Télécharger les mises à jour automatiquement",
-    "auto-launch": "Démarrer automatiquement",
+    "app": "app",
+    "auto-download": "Télécharger la mise à jour automatiquement",
+    "auto-launch": "Exécuter au démarrage",
     "cancel": "Annuler",
-    "dialog": "Boîte de dialogue",
+    "dialog": "Dialogue",
     "dialog-opacity": "Opacité de la boîte de dialogue",
     "dialog-spawn-position": {
-      "center": "Centré",
+      "center": "Centre",
       "cursor": "Le curseur"
     },
     "dialog-spawn-position-title": "Position d'apparition de la boîte de dialogue",
     "display-version": "Afficher la version",
     "exit-app": "Quitter l'application",
-    "focusable": "Focalisable (prise en charge du clavier)",
-    "focusable-description": "Permet la navigation au clavier de l'overlay (TAB / FLÈCHES DU CLAVIER [←→↑↓])",
+    "focusable": "Focusable (prise en charge du clavier)",
+    "focusable-description": "Permet la navigation au clavier de la superposition (TAB / ARROW KEYS [←→↑↓])",
     "game-settings": "Paramètres de jeu",
     "general": "Général",
     "languages": {
       "english": "Anglais",
-      "french": "Français",
+      "french": "français",
       "german": "Allemand",
-      "korean": "Coréen",
-      "polish": "Polonais",
+      "korean": "coréen",
+      "polish": "polonais",
       "portuguese": "Portugais",
-      "russian": "Russe",
+      "russian": "russe",
       "simplifiedchinese": "Chinois simplifié",
       "spanish": "Espanol",
-      "thai": "Thaïlandais",
+      "thai": "thaïlandais",
       "traditionalchinese": "Chinois traditionnel"
     },
     "league": "Ligue",
